@@ -86,19 +86,15 @@
 # $2 - tool to test (e.g. "binutils" will run "check-binutils"
 # $3 - log file
 
-#!/bin/sh
-
 #Depending of the OS pick the right sed tool
-SED=$SED
-if [ "`uname -s`" == "Darwin" ]
+if [ "x${SED}" = "x" ]
 then
-  #gsed is included as part gnu-sed package, you can install it with homebrew
-  #brew install gnu-sed
-  if [ "x${SED}" == "x" ]; then
+  if [ "`uname -s`" = "Darwin" ]
+  then
+    #gsed is included as part gnu-sed package, you can install it with homebrew
+    #brew install gnu-sed
     SED=gsed
-  fi
-else
-  if [ "x${SED}" == "x" ]; then
+  else
     SED=sed
   fi
 fi
